objects/MPM4_BASE__Milestone1_Log__c.object
<CustomObject>
    <fields>
        <fullName>MPM4_BASE__Detail__c</fullName>
        <inlineHelpText>The details about the log. This is freeform text for user to capture whatever data they want to keep track of in the log.</inlineHelpText>
        <label>Detail</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Project_Expense__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A project expense we want to log some information about.</inlineHelpText>
        <label>Project Expense</label>
        <referenceTo>MPM4_BASE__Milestone1_Expense__c</referenceTo>
        <relationshipName>Project_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Project_Time__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>A time entry we want to log some information about.</inlineHelpText>
        <label>Project Time</label>
        <referenceTo>MPM4_BASE__Milestone1_Time__c</referenceTo>
        <relationshipName>Project_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MPM4_BASE__Type__c</fullName>
        <inlineHelpText>The type of log. This can be used to order logs into different types.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>MPM4_BASE__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>